styling fix for chat edit icon visibility fixes #917

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -271,7 +271,7 @@
   padding: 0;
 }
 
-.trpChatTime, .trpChatEdit, .trpChatReads {
+.trpChatTime, .trpChatReads {
 	display: inline-block;
 }
 
@@ -325,7 +325,6 @@
   height: 16px;
   vertical-align: middle;
   padding-bottom: 2px;
-  display: inline-block;
 }
 
 // if the viewer can edit the message, dont gray it out
